--- a/app/package.json
+++ b/app/package.json
@@ -15,15 +15,21 @@
   "devDependencies": {
     "cordova-android": "^9.0.0",
     "cordova-ios": "^6.2.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-http": "^1.2.0",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-http": {}
     },
     "platforms": [
       "android",
       "ios"
     ]
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0"
   }
 }
